final commit...change of json and recipe details

--- a/pages/recipes.html
+++ b/pages/recipes.html
@@ -58,68 +58,14 @@
             <span class="tag">Garlic</span>
             <span class="tag">Cream</span>
           </div>
-          <a href="#" class="recipe-link">
-            View Recipe
-            <span class="link-arrow">→</span>
+          <a href="recipe-info.html?id=${encodeURIComponent(recipe.id)}" class="recipe-link">
+            View Recipe <span class="link-arrow">→</span>
           </a>
         </div>
       </div>
 
-      <div class="card">
-        <div class="card-header">
-          <img
-            class="recipe-image"
-            src="../assets/Mediterranean-Garden-Salad.jpg"
-            alt="Mediterranean Garden Salad"
-          />
-          <span class="badge">Quick</span>
-        </div>
-        <div class="card-body">
-          <h3>Mediterranean Garden Salad</h3>
-          <div class="meta">⏱ 15 mins • 🍽 2 servings</div>
-          <p class="desc">
-            Fresh and vibrant salad with tomatoes, cucumbers, olives, and feta
-            cheese dressed in olive oil and herbs.
-          </p>
-          <div class="tags">
-            <span class="tag">Tomatoes</span>
-            <span class="tag">Cucumber</span>
-            <span class="tag">Feta</span>
-          </div>
-          <a href="#" class="recipe-link">
-            View Recipe
-            <span class="link-arrow">→</span>
-          </a>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card-header">
-          <img
-            class="recipe-image"
-            src="../assets/Rainbow-Vegetable-Stir-Fry.jpg"
-            alt="Rainbow Vegetable Stir Fry"
-          />
-          <span class="badge">Medium</span>
-        </div>
-        <div class="card-body">
-          <h3>Rainbow Vegetable Stir Fry</h3>
-          <div class="meta">⏱ 20 mins • 🍽 3 servings</div>
-          <p class="desc">
-            Colorful and nutritious stir fry with mixed vegetables, ginger, and
-            soy sauce served over rice.
-          </p>
-          <div class="tags">
-            <span class="tag">Mixed Veg</span>
-            <span class="tag">Ginger</span>
-            <span class="tag">Soy Sauce</span>
-          </div>
-          <a href="#" class="recipe-link">
-            View Recipe
-            <span class="link-arrow">→</span>
-          </a>
-        </div>
-      </div>
+      <div class="card"></div>
+        
     </div>
 
     <!-- Buttons -->
