--- a/pages/recipe-info.html
+++ b/pages/recipe-info.html
@@ -186,20 +186,6 @@
             <div class="recipe-section">
               <div class="section-header">
                 <h2 class="section-title">Cooking Steps</h2>
-                <div class="steps-progress">
-                  <div class="progress-bar">
-                    <div
-                      class="progress-fill"
-                      id="stepsProgress"
-                      style="width: 0%"
-                    ></div>
-                  </div>
-                  <span class="progress-text"
-                    ><span id="completedSteps">0</span>/<span id="totalSteps"
-                      >8</span
-                    ></span
-                  >
-                </div>
               </div>
 
               <div class="steps-list" id="stepsList">
@@ -221,7 +207,7 @@
                 <div class="impact-item food-saved">
                   <div class="impact-header">
                     <span class="impact-icon">🎯</span>
-                    <span class="impact-title">Food Saved</span>
+                    <span class="impact-title"><b>Food Saved</b></span>
                   </div>
                   <p class="impact-description">
                     Complete this recipe to save 320g of vegetables from waste!
@@ -232,25 +218,13 @@
                 <div class="impact-item carbon-footprint">
                   <div class="impact-header">
                     <span class="impact-icon">🌲</span>
-                    <span class="impact-title">Carbon Footprint</span>
+                    <span class="impact-title"><b>Carbon Footprint</b></span>
                   </div>
                   <p class="impact-description">
                     This recipe has 40% lower carbon footprint than ordering
                     takeout 🌍
                   </p>
                 </div>
-              </div>
-            </div>
-
-            <!-- Achievements -->
-            <div class="sidebar-card">
-              <h3 class="sidebar-title">
-                <span class="sidebar-icon">🏆</span>
-                Achievements
-              </h3>
-
-              <div class="achievements-list" id="achievementsList">
-                <!-- Achievements will be populated by JavaScript -->
               </div>
             </div>
 
@@ -276,12 +250,5 @@
       <p>© 2025 ReciP | All Rights Reserved</p>
     </footer>
 
-    <script src="script.js"></script>
-    <script>
-      // Initialize recipe detail page
-      document.addEventListener("DOMContentLoaded", function () {
-        initializeRecipeDetail();
-      });
-    </script>
   </body>
 </html>
